# ppgFace

./: AvatarEngine1.0Setup  FeatureExtraction.cpp
OpenFace_v0.2.2/: CMakeLists.txt~  build_openface.sh
OpenFace_v0.2.2/exe/DressColorDetection/: CMakeLists.txt  DressColorDetection.cpp
OpenFace_v0.2.2/exe/FaceDetectionImg/: CMakeLists.txt  FaceDetectionImg.cpp
OpenFace_v0.2.2/exe/FaceRecognition_Test/: 2DfaceRecognition.cpp  2DfaceRecognition.hpp  CMakeLists.txt  FaceRecogTest_Thresholds.xml  FaceRecognition_Test.cpp  histogram.cpp  lbp.cpp  lbp.hpp
OpenFace_v0.2.2/exe/FaceRecognition_Train/: 2DfaceRecognition.cpp  2DfaceRecognition.cpp.save  CMakeLists.txt  FaceRecognition_Train.cpp
OpenFace_v0.2.2/exe/FacialExpression/: CMakeLists.txt  FacialExpression.cpp  PredictExpression.cpp  PredictExpression.h  emo_model.txt  emoscale
